# zk-agentauth

./: .gitignore  README.md
docs/: security-goals-testing.md  testing-plan.md
lib/: CMakeLists.txt  zstd.h
lib/CMake/: proofs.cmake
lib/algebra/: blas.h  bogorng.h  crt.h  crt_test.cc  fft.h  fft_interpolation.h  fft_interpolation_test.cc  fft_test.cc  fp2.h  fp2_test.cc  fp_generic.h  fp_p128.h  fp_p256k1.h  fp_p384.h  fp_p521.h  fp_test.cc  interpolation_test.cc  limb.h  limb_test.cc  nat.cc  nat.h  nat_test.cc  nussbaumer.h  nussbaumer_test.cc  nussbaumerfp2_test.cc  permutations.h  poly.h  poly_test.cc  reed_solomon_test.cc  rfft.h  rfft_test.cc  sysdep.h  sysdep_test.cc  twiddle.h  utility_test.cc
lib/arrays/: affine_test.cc  dense.h  eqs.h  eqs_test.cc  sparse.h
lib/cbor/: host_decoder.h  host_decoder_test.cc
lib/ec/: CMakeLists.txt  elliptic_curve.h  elliptic_curve_test.cc
lib/examples/delegation_demo/: CMakeLists.txt
lib/examples/delegation_demo/agent/: main.cc  present.cc  present.h
lib/examples/delegation_demo/alice/: delegate.cc  delegate.h  main.cc
lib/examples/delegation_demo/issuer/: main.cc
lib/examples/delegation_demo/shared/: delegation_crypto.cc  delegation_crypto.h  delegation_files.cc  delegation_files.h  delegation_revocation.cc  delegation_revocation.h  types.h
lib/examples/delegation_demo/verifier/: main.cc  verify.cc  verify.h
lib/examples/mdoc_anoncred/: CMakeLists.txt  README.md  demo_test.cc
lib/examples/mdoc_anoncred/builder/: cbor_encode.cc  cbor_encode.h  input.cc  input.h  issue_custom.cc  issue_custom.h
lib/examples/mdoc_anoncred/console/: main.cc
lib/examples/mdoc_anoncred/holder/: main.cc  prove.cc  prove.h
lib/examples/mdoc_anoncred/issuer/: issue.cc  issue.h  main.cc
lib/examples/mdoc_anoncred/shared/: crypto.cc  crypto.h  files.cc  files.h  interactive.cc  interactive.h  mdoc_demo.cc  mdoc_demo.h  request_codec.cc  request_codec.h  types.h
lib/examples/mdoc_anoncred/verifier/: main.cc  verify.cc  verify.h
lib/gf2k/: gf2_128.h  gf2_128_bench.cc  gf2_128_test.cc  lch14_bench.cc  lch14_reed_solomon_test.cc  lch14_test.cc  sysdep.h
lib/ligero/: ligero_test.cc
lib/merkle/: merkle_tree_test.cc
lib/proto/: circuit.h  circuit_test.cc
lib/random/: random.h  random_test.cc  transcript_test.cc
lib/sumcheck/: circuit.h  circuit_id.h  prover.h  prover_layers.h  quad.h  quad_test.cc  sumcheck_test.cc  testing.h  verifier.h  (+1 more)
scripts/: perf_cli.sh  security_cli.sh  security_goals_cli.sh
web/: .venv  Makefile  README.md  start.sh
(+98 files in other folders)
